# pyschemer

./: README.md  docker-compose.yml  kafka_jaas.conf  pyproject.toml
src/py_json_sr_evo/: person.py  personAddedJob.py
tests/: DataProductCDPricing.json  dc_sr_evo_test.py  price_data_v1.json  price_msg_1.json  price_msg_2.json  price_schema_evo_test.py  price_schema_v1.json  schema_v1.json  schema_v2.json  schema_v3.json  si_prod_schema_v1.json  si_sr_evo_test.py  test_utils.py
tests/avro/: dc_sr_evo_test.py
tests/json_sr/: dc_sr_evo_test.py
