[project]
name = "py_json_sr_evo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ksilin", email = "konstantin.silin@gmail.com"},
]
dependencies = [
    "confluent-kafka>=2.5.0",
    "requests>=2.32.3",
    "jsonschema>=4.23.0",
    "testcontainers>=4.7.2",
    "fastavro>=1.9.5",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.5.5",
    "mypy>=1.11.0",
]
pytest = [
    "pytest-cov>=5.0.0",
]
dev = [
    "pytest>=8.3.2",
]

[tool.pdm.scripts]
lint = "ruff ."
fmt = "ruff format ."

[tool.ruff]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # pycodestyle - Error
    "F", # Pyflakes
    "I", # isort
    "W", # pycodestyle - Warning
    "UP", # pyupgrade
]
ignore = [
    "E501", # line-too-long
    "W191", # tab-indentation
]
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
